--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>DAHIYA GENERATORS - All Types Generators Available</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=Poppins:wght@600;display=swap" rel="stylesheet">
     <style>
         :root {
             --primary-color: #2c3e50;
@@ -14,8 +14,28 @@
             --accent-color: #25d366;
         }
         
-        body {
+        body, html {
             font-family: 'Roboto', 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+
+        h1, h2, h3, h4, h5, h6, .welcome-title, .navbar-brand {
+            font-family: 'Poppins', 'Roboto', sans-serif;
+            letter-spacing: 1px;
+        }
+
+        .navbar {
+            background: rgba(44,62,80,0.85) !important;
+            backdrop-filter: blur(8px);
+            box-shadow: 0 2px 16px rgba(44,62,80,0.10);
+            border-bottom: 1.5px solid #25d36622;
+        }
+
+        .navbar .nav-link.active, .navbar .nav-link:focus {
+            color: #25d366 !important;
+            font-weight: 600;
+        }
+
+        body {
             background: #f7f9fa;
         }
 
@@ -109,6 +129,8 @@
 
         .footer-gradient {
             background: linear-gradient(90deg, #2c3e50 60%, #25d366 100%);
+            border-top: 3px solid #25d36644;
+            box-shadow: 0 -2px 16px #25d36633;
         }
 
         .whatsapp-float {
@@ -317,13 +339,21 @@
             justify-content: center;
             transition: opacity 0.7s;
             opacity: 1;
+            overflow: hidden;
         }
         .welcome-content {
             color: #fff;
             text-align: center;
             width: 100vw;
             max-width: 90vw;
+            background: rgba(255,255,255,0.08);
+            border-radius: 24px;
+            box-shadow: 0 8px 32px #2c3e5077;
+            padding: 2.5em 1.5em 2em 1.5em;
+            position: relative;
+            animation: fadeInSplash 1.2s cubic-bezier(.4,0,.2,1);
         }
+        @keyframes fadeInSplash { from { opacity: 0; transform: translateY(40px);} to { opacity: 1; transform: none; } }
         .welcome-title {
             font-size: 2.7rem;
             font-weight: 800;
@@ -352,16 +382,78 @@
             0% { transform: rotate(0deg); }
             100% { transform: rotate(360deg); }
         }
+        .splash-shape {
+            position: absolute;
+            border-radius: 50%;
+            opacity: 0.13;
+            pointer-events: none;
+            animation: floatShape 7s ease-in-out infinite alternate;
+        }
+        .splash-shape.s1 { width: 120px; height: 120px; left: 8vw; top: 18vh; background: #25d366; animation-delay: 0s; }
+        .splash-shape.s2 { width: 80px; height: 80px; right: 10vw; top: 30vh; background: #2c3e50; animation-delay: 2s; }
+        .splash-shape.s3 { width: 60px; height: 60px; left: 30vw; bottom: 12vh; background: #e74c3c; animation-delay: 1s; }
+        @keyframes floatShape {
+            0% { transform: translateY(0) scale(1); }
+            100% { transform: translateY(-30px) scale(1.1); }
+        }
+        .hero-glass {
+            background: rgba(255,255,255,0.18);
+            border-radius: 24px;
+            box-shadow: 0 8px 32px #2c3e5022;
+            backdrop-filter: blur(8px);
+            padding: 2.5em 1.5em 2em 1.5em;
+            display: inline-block;
+            animation: fadeInHero 1.2s cubic-bezier(.4,0,.2,1);
+        }
+        @keyframes fadeInHero { from { opacity: 0; transform: translateY(40px);} to { opacity: 1; transform: none; } }
+        .btn-primary, .btn-success {
+            background: linear-gradient(90deg, #25d366 0%, #2c3e50 100%);
+            color: #fff;
+            border: none;
+            box-shadow: 0 2px 8px #25d36633;
+            font-weight: 600;
+            letter-spacing: 1px;
+            transition: background 0.2s, transform 0.2s, box-shadow 0.2s;
+        }
+        .btn-primary:hover, .btn-success:hover {
+            background: linear-gradient(90deg, #2c3e50 0%, #25d366 100%);
+            transform: translateY(-2px) scale(1.04);
+            box-shadow: 0 8px 24px #25d36633;
+        }
+        .feature-modern-card, .contact-card {
+            background: rgba(255,255,255,0.85);
+            box-shadow: 0 2px 16px #25d36622;
+            border: 1.5px solid #25d36622;
+            transition: box-shadow 0.2s, transform 0.2s, border-color 0.2s;
+        }
+        .feature-modern-card:hover, .contact-card:hover {
+            box-shadow: 0 8px 32px #25d36644;
+            border-color: #25d366;
+            transform: translateY(-4px) scale(1.04);
+        }
+        .section-divider {
+            display: block;
+            width: 100%;
+            height: 48px;
+            margin: 0;
+            border: none;
+            background: none;
+            padding: 0;
+        }
         @media (max-width: 600px) {
             .welcome-title { font-size: 1.5rem; }
             .welcome-tagline { font-size: 1rem; }
             .welcome-loader { width: 38px; height: 38px; border-width: 4px; }
+            .hero-glass { padding: 1.2em 0.5em; }
         }
     </style>
 </head>
 <body>
     <!-- Welcome Splash Page -->
     <div id="welcomeSplash" class="welcome-splash">
+      <div class="splash-shape s1"></div>
+      <div class="splash-shape s2"></div>
+      <div class="splash-shape s3"></div>
       <div class="welcome-content">
         <h1 class="welcome-title">DAHIYA GENERATORS</h1>
         <div class="welcome-tagline">Welcome | स्वागत है</div>
@@ -397,7 +489,7 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero-section p-0" style="height:auto;min-height:60vh;">
-        <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div id="heroCarousel" class="carousel slide" data-bs-ride="carousel" style="z-index:1;">
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="images/WhatsApp Image 2025-05-09 at 12.44.29 PM.jpeg" class="d-block w-100" alt="Generator Image 1" style="max-height:500px;object-fit:cover;">
@@ -428,7 +520,7 @@
             </button>
             <div class="hero-overlay"></div>
         </div>
-        <div class="container text-center position-absolute top-50 start-50 translate-middle" style="z-index:2;">
+        <div class="container text-center position-absolute top-50 start-50 translate-middle hero-glass" style="z-index:2;">
             <h1 class="display-4 mb-4 text-shadow" style="color:#fff;">DAHIYA GENERATORS</h1>
             <p class="lead mb-4 text-shadow" style="color:#fff;">सभी प्रकार के जनरेटर उपलब्ध हैं | All Types Generators are Available Here</p>
             <a href="#products" class="btn btn-primary btn-lg">जनरेटर देखें</a>
@@ -490,7 +582,7 @@
 
     <!-- Features Section -->
     <section id="features" class="py-5 bg-light position-relative">
-        <hr class="mb-5" style="border:0;border-top:2px solid #e0e0e0;opacity:0.5;width:60px;margin:auto;">
+        <hr class="mb-5 section-divider" style="border:0;">
         <div class="container">
             <h2 class="text-center mb-5">हमारी विशेषताएं</h2>
             <div class="features-scroll-row d-flex flex-row flex-nowrap gap-4 overflow-auto">
